static/style.css
:root {
	--accent: #ff3d73;

	--light-background:#fff;
	--light-background-secondary:#eaeaea;
	--light-header:#fafafa;
	--light-color:#222;
	--light-color-secondary:#999;
	--light-border-color:#dcdcdc;
	--dark-background:#292a2d;
	--dark-background-secondary:#3b3d42;
	--dark-header:#252627;
	--dark-color:#a9a9b3;
	--dark-color-secondary:#73747b;
	--dark-border-color:#4a4b50;
}

.logo__mark > .greater-icon > path {
	stroke: var(--accent);
}

.logo__cursor {
	background: var(--accent) !important;
}

.menu__inner li {
	margin: 0px 6px;
}

a:hover {
	color: var(--accent);
}

.footer__inner > .logo > .logo__cursor {
	display: none;
}

.copyright {
	font-size: 0.75rem !important;
}

em {
	font-style: normal;
	color: var(--accent);
}

.html-video {
	border-radius: 8px;
}

#disqus_thread {
	padding-top: 20px;
}

.portfolio-container {
	display: grid;
	grid-template-columns: 50% 50%;
	column-gap: 1rem;
	row-gap: 1rem;
}

@media (max-width: 684px) {
	.portfolio-container {
		grid-template-columns: 100%;
	}
}

.portfolio-item {
	position: relative;
	display: block;
}

.portfolio-cover-container {
	width: 100%;
	height: 100%;
	overflow: hidden;
	border-radius: 8px;
	text-align: center;
}

.portfolio-item-tooltip-text {
	text-align: center;
}

.portfolio-cover {
	transition: all 0.4s;
}

.portfolio-item-tooltip-position {
	display: flex;
	align-items: center;
	justify-content: center;
	position: absolute;
	top: 0;
	left: 0;
	opacity: 0;
	transition: opacity 0.4s;
	width: 100%;
	height: 100%;
}

.portfolio-item-tooltip-container {
	font-weight: 800;
	display: block;
	color: white;
}

.portfolio-item:hover .portfolio-item-tooltip-position {
	opacity: 1;
	transition: opacity 0.4s;
}

.portfolio-item:hover .portfolio-cover {
	/* height: calc(100% + 16px) !important;
	max-width: calc(100% + 9px) !important;
	margin-top: -8px;
	margin-left: -4.5px; */
	transform: scale(1.02);
	filter: blur(4px) brightness(0.7);
	transition: all 0.4s;
}

#post-breadcrumb {
	position: relative;
	top: -20px
}

.post-content > img {
	border-radius: 8px;
	margin: 40px -50px;
	width: 860px;
	max-width: 860px;
	box-shadow: 0 12px 40px rgba(0,0,0,.15);
}

.image-caption {
	text-align: center;
	margin-bottom: 32px;
	color: var(--light-color-secondary);
}

.dark-theme .image-caption {
	color: var(--dark-color-secondary) !important;
}

